-
Bug
-
Resolution: Done
-
P2: Important
-
5.9.0, 5.9.3
-
MacOS + Qt 5.9.0 + Xcode 8.3.0
-
f9b8ea4b0eaea94a6d724a0955b13fd8a97d96e3
On macOS, create a QDateTime object like this:
QDateTime(QDate(), QTime(), QTimeZone::systemTimeZone());
In debug mode, it'll assert here: qtimezoneprivate.cpp line 329.
This is because the QMacTimeZonePrivate::previousTransition function returns a invalid QTimeZonePrivate::Data structure when "forLocalMSecs" is equal to zero (which it will be when the date and time portion of the QDateTime are invalid).
The output on assert is this
[wopr:~/Desktop/datetime]$ export DYLD_IMAGE_SUFFIX=_debug [wopr:~/Desktop/datetime]$ ./datetime ASSERT: "forLocalMSecs < 0 || forLocalMSecs >= tran.atMSecsSinceEpoch + tran.offsetFromUtc * 1000" in file tools/qtimezoneprivate.cpp, line 332 Abort trap: 6
To reproduce it requires debug version of the frameworks? In QtCreator, check-off the "Use debug version of the frameworks".
The function where the assert happens, you can see that it easily handles the fallback situation where the values are invalid. The assert is needless and roadblocks a developers who actual do run into situations were the QDateTime object is instantiated with invalid
date/times but a valid timezone. Instead of an assert, use qWarning(), or even qCritical() if you must. There is no need to force an application abort in this case.
| For Gerrit Dashboard: QTBUG-65443 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 216200,3 | Fix QMacTimeZonePrivate::previousTransition() for early after epoch | 5.9 | qt/qtbase | Status: MERGED | +2 | 0 |